# stack-algebra

./: Cargo.toml  README.md  lu.py  scratch.py
.github/workflows/: ci.yml
src/: algebra.rs  fmt.rs  index.rs  iter.rs  lib.rs  new.rs  num.rs  ops.rs  util.rs  view.rs
