[package]
name = "stack-algebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vectrix-macro = { version = "0.3.0"}
stride = { version = "0.3.0"}
libm = "0.2.6"
approx = "0.5"

# [dev-dependencies]
# approx = "0.5"
