[package]
name = "stack-algebra"
authors = ["Yongkyun Shin <yongkyuns@gmail.com>"]
description = "Stack-allocated lightweight algebra for bare-metal rust"
repository = "https://github.com/yongkyuns/stack-algebra"
documentation = "https://docs.rs/stack-algebra"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["mathematics", "science", "no-std"]
keywords = ["robotics", "math", "matrix", "vector", "linear-algebra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vectrix-macro = { version = "0.3.0"}
stride = { version = "0.3.0"}
libm = "0.2.6"
approx = "0.5"

# [dev-dependencies]
# approx = "0.5"
